--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,6 @@
 <p> Description:
   <%=@article.description%>
 </p>
+
+<%= link_to "edit article listing", edit_article_path(@article) %> |
+<%= link_to "back to article listing", articles_path %>
